draft/ITHelp_30Days/example/npolicy/test-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  labels:
    app: test
spec:
  containers:
  - name: nginx
    image: quay.io/brandon_tsai/testlab:1
    imagePullPolicy: Always
    ports:
    - containerPort: 8080
