draft/ITHelp_30Days/example/npolicy/prod.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-prod
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-prod
  template:
    metadata:
      labels:
        app: nginx-prod
    spec:
      containers:
      - name: nginx
        image: quay.io/brandon_tsai/testlab:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        volumeMounts:
        - name: nginx-index
          mountPath: /opt/app-root/src
      volumes:
        - name: nginx-index
          configMap:
            name: nginx-prod-index
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-prod
spec:
  selector:
    app: nginx-prod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
