draft/ITHelp_30Days/example/npolicy/uat.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-uat
  labels:
    app: nginx-uat
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-uat
  template:
    metadata:
      labels:
        app: nginx-uat
    spec:
      containers:
      - name: nginx
        image: quay.io/brandon_tsai/testlab:1
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
        - containerPort: 8443
        volumeMounts:
        - name: nginx-tls
          mountPath: /opt/app-root/tls
        - name: nginx-config
          mountPath: /opt/app-root/etc/nginx.d/
      volumes:
        - name: nginx-tls
          secret:
            secretName: nginx-tls
        - name: nginx-config
          configMap:
            name: nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-uat
spec:
  selector:
    app: nginx-uat
  ports:
    - name: port-http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: port-https
      protocol: TCP
      port: 443
      targetPort: 8443
